<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/team1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="23dp"
            android:layout_marginTop="12dp"
            android:text="@string/team_1"
            android:textAppearance="@android:style/TextAppearance.Material.Large" />

        <TextView
            android:id="@+id/team2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/team1"
            android:layout_alignBottom="@+id/team1"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="25dp"
            android:text="@string/team_2"
            android:textAppearance="@android:style/TextAppearance.Material.Large" />

        <TextView
            android:id="@+id/card"
            android:layout_width="250dp"
            android:layout_height="300dp"
            android:layout_below="@+id/team2"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="false"
            android:layout_marginTop="67dp"
            android:background="@color/colorAccent"
            android:text=""
            android:textAlignment="center"
            android:textAppearance="@android:style/TextAppearance.Material.Headline" />

        <TextView
            android:id="@+id/team2score"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/team1score2"
            android:layout_alignBottom="@+id/team1score2"
            android:layout_alignStart="@+id/team2"
            android:text=""
            android:textAlignment="center"
            android:textAppearance="@android:style/TextAppearance.Material.Large" />

        <TextView
            android:id="@+id/team1score2"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/team1"
            android:layout_below="@+id/team1"
            android:layout_marginTop="12dp"
            android:text=""
            android:textAlignment="center"
            android:textAppearance="@android:style/TextAppearance.Material.Large" />

        <Button
            android:id="@+id/correctBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:text="@string/correct" />

        <Button
            android:id="@+id/skipBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/correctBtn"
            android:text="@string/skip" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="300dp"
            android:layout_height="20dp"
            android:layout_alignEnd="@+id/team2"
            android:layout_below="@+id/card"
            android:layout_marginTop="25dp"
            android:max="100"
            android:progress="20"
            android:visibility="visible" />

        <TextView
            android:id="@+id/round"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/card"
            android:layout_alignParentBottom="true"
            android:text="@string/round_1"
            android:textAppearance="@android:style/TextAppearance.Material.Large" />
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>